# iWork-skills

./: .gitignore  CMakeLists.txt  README.md
3rd/onnxruntime-1.24.4/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
3rd/onnxruntime-1.24.4/lib/libonnxruntime.1.24.4.dylib.dSYM/Contents/: Info.plist
3rd/onnxruntime-1.24.4/lib/libonnxruntime.1.24.4.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libonnxruntime.1.24.4.dylib.yml
3rd/onnxruntime-1.24.4/lib/pkgconfig/: libonnxruntime.pc
iWork-bashexec/: CMakeLists.txt
iWork-filemerge/: CMakeLists.txt
iWork-filemerge/src/: main.c  merge.c
iWork-filemerge/test/: ours.txt
iWork-sourcewrite/: CMakeLists.txt  README.md
iWork-sourcewrite/src/: common.h  main.c
iWork-sourcewrite/test/: demo_02.md
iw-bashexec/: CMakeLists.txt
iw-bashexec/src/: main.c
iw-filemerge/: CMakeLists.txt
iw-filemerge/src/: merge.h
iw-filemerge/test/: base.txt  theirs.txt
iw-funcomplex/: CMakeLists.txt
iw-funcomplex/src/: iw-funcomplex.c  iw-funcomplex.h  main.c
iw-html2image/: CMakeLists.txt
iw-html2image/src/: main.c
iw-html2image/test/: test.html
iw-llmclient/: CMakeLists.txt
iw-llmclient/src/: main.c
iw-mimetype/: CMakeLists.txt
iw-mimetype/src/: iw-mimetype.c
iw-sourceread/: CMakeLists.txt
iw-sourceread/src/: iw-cfg.c  iw-cfg.h  iw-complex.c  iw-complex.h  iw-dfg.c  iw-dfg.h  iw-graph.c  iw-graph.h  iw-memory.c  iw-memory.h  main.c  memory_store.c
iw-sourceread/test/: BillExtrApiExtractBillPkgServiceImpl.java
iw-sourcewrite/: CMakeLists.txt  README.md
iw-sourcewrite/src/: common.h  main.c
iw-sourcewrite/test/: demo_01.md  demo_03.md
test/java/: AggregateParser.java  AggregateRelationshipChain.java
