cmake_minimum_required(VERSION 3.10)

project(iWork-skills)

add_subdirectory(iw-sourcewrite)
add_subdirectory(iw-filemerge)
add_subdirectory(iw-bashexec)
add_subdirectory(iw-html2image)
add_subdirectory(iw-sourceread)
add_subdirectory(iw-funcomplex)
add_subdirectory(iw-mimetype)
add_subdirectory(iw-llmclient)
